# cinescope-api-tests

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  constants.py  mypy.ini  pyproject.toml  pytest.ini  requirements.lock.txt  requirements.txt
.github/workflows/: ci.yml
assertions/: assert_user_contract.py  auth_assertions.py  movies_assertions.py
clients/: api_manager.py  auth_api.py  movies_api.py  user_api.py
constants/: api_constants.py  roles.py
custom_requester/: custom_requester.py
db/: engine.py  queries.py
entities/: movie.py  user.py
models/: admin_models.py  common.py  errors_models.py  get_user_models.py  login_models.py  movie_models.py  register_models.py
pages/: base_page.py  login_page.py  movie_page.py  registration_page.py
resources/: db_creds.py  user_creds.py
tests/api/auth/: test_auth.py
tests/api/movies/: test_movies.py
tests/db/: test_movies_db.py
tests/ui/: test_authorized_homepage.py  test_login_negative.py  test_login_page.py  test_movie_review.py  test_registration_flow.py  test_registration_page.py
utils/: data_generator.py  movie_payloads.py  user_payloads.py
